- Added spacing between numbers and operators - Fixed bug where DELETE needed to be clicked/pressed twice to delete - Fixed bug where calculator would allow multiple operators to be entered sequentially - Fixed bug where adding a decimal point without a number could result in a lone decimal - Fixed bug where whole numbers could start with 0 - Fixed bug where '=' evaluated to 0 when there was a number but no operators in the expression - Fixed mini-display expression output bugs - Added dark-colored background - Made buttons dark colored - Made font white

--- a/styles.css
+++ b/styles.css
@@ -3,10 +3,15 @@
 * {
     font-family: Roboto, sans-serif;
     font-size: 22px;
+    color: white;
+}
+
+body {
+    background-color: #2C3333;
 }
 
 .display {
-    border: 2px solid darkslategray;
+    border: 2px solid white;
     margin: auto;
     margin-top: 50px;
     padding: 10px;
@@ -29,7 +34,7 @@
 }
 
 .calculator {
-    border: 2px solid darkslategray;
+    border: 2px solid white;
     margin: 0 auto;
     margin-bottom: 50px;
     width: 400px;
@@ -50,5 +55,7 @@
     width: 100%;
     height: 100%;
     margin: 0 auto;
+    background-color: #395B64;
+    border: #A5C9CA 1px solid;
 }
 
